--- a/public/404.html
+++ b/public/404.html
@@ -1,1 +1,56 @@
-fkljdsklfjlksdjfl
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Offisdes! Wrong Page Sorry</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+  body {
+background-color: #DBFBFF;
+    color: #2E2F30;
+    text-align: center;
+    font-family: arial, sans-serif;
+    margin: 0;
+  }
+
+  div.dialog {
+    width: 95%;
+    max-width: 33em;
+    margin: 4em auto 0;
+  }
+
+  div.dialog > div {
+    border: 1px solid #CCC;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+    background-color: #42CA8A;
+    padding: 7px 12% 0;
+    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  }
+
+  h1 {
+    font-size: 100%;
+    color: white;
+    line-height: 1.5em;
+  }
+
+  div.dialog > p {
+    margin: 0 0 1em;
+    padding: 1em;
+    background-color: #F7F7F7;
+    border: 1px solid #CCC;
+    color: white;
+    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  }
+  </style>
+</head>
+
+<body>
+  <!-- This file lives in public/404.html -->
+  <div class="dialog">
+    <div>
+      <h1>Offsides! Sorry, the page you are looking for does not exist</h1>
+      <p>You may have mistyped the address or the page may have moved.</p>
+    </div>
+  </div>
+</body>
+</html>
