--- a/public/500.html
+++ b/public/500.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <head>
-    <%= display_meta_tags :site => 'Goalopedia' %>
-  </head>
-    <%= favicon_link_tag 'favicon.ico' %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <script type"text/javascript" src="http://test.gfycat.com/gfycat_test_may18.js"></script>
-    <%= csrf_meta_tags %>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Offisdes! Wrong Page Sorry</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+  body {
+background-color: #DBFBFF;
+    color: #2E2F30;
+    text-align: center;
+    font-family: arial, sans-serif;
+    margin: 0;
+  }
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  div.dialog {
+    width: 95%;
+    max-width: 33em;
+    margin: 4em auto 0;
+  }
 
-    ga('create', 'UA-53883839-1', 'auto');
-    ga('require', 'linkid', 'linkid.js');
-    ga('require', 'displayfeatures');
-    ga('send', 'pageview');
+  div.dialog > div {
+    border: 1px solid #CCC;
+    border-top-left-radius: 9px;
+    border-top-right-radius: 9px;
+    background-color: #42CA8A;
+    padding: 7px 12% 0;
+    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  }
 
-  </script>
+  h1 {
+    font-size: 100%;
+    color: white;
+    line-height: 1.5em;
+  }
+
+  div.dialog > p {
+    margin: 0 0 1em;
+    padding: 1em;
+    background-color: #F7F7F7;
+    border: 1px solid #CCC;
+    color: white;
+    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  }
+  </style>
 </head>
+
 <body>
-  <nav class="navbar navbar-default" role="navigation">
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    
-  </div>
-
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="navbar-collapse-1">
-    <%= link_to(image_tag("logoNBG.png", :class => "navBrand", :alt => "Goalopedia"), root_path) %>
-</nav>
-
-  <div class="container-fluid">
-    <%= bootstrap_flash %>
-<div class="jumbotron">
-<h1>Offsides!</h1>
-
+  <!-- This file lives in public/404.html -->
+  <div class="dialog">
+    <div>
+      <h1>Offsides! Sorry, the page you are looking for does not exist, click <a href="http://www.goalopedia.com/">here</a></h1>
+      <div class="jumbotron">
 <div class="compBox box">
     <h2><%= link_to "This is not the page your looking for!", root_path %></h2>
     <div class="gfySize">
@@ -55,8 +58,7 @@
 
   </div>
 </div>    
-
+    </div>
   </div>
-
 </body>
 </html>
