--- a/public/404.html
+++ b/public/404.html
@@ -3,6 +3,8 @@
 <head>
   <title>Offisdes! Wrong Page Sorry</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+      <script type"text/javascript" src="http://test.gfycat.com/gfycat_test_may18.js"></script>
+
   <style>
   body {
 background-color: #DBFBFF;
