last fucking errors

--- a/public/404.html
+++ b/public/404.html
@@ -51,16 +51,10 @@ background-color: #DBFBFF;
   <div class="dialog">
     <div>
       <h1>Offsides! Sorry, the page you are looking for does not exist, click <a href="http://www.goalopedia.com/">here</a></h1>
-      <div class="jumbotron">
-<div class="compBox box">
-    <h2><%= link_to "This is not the page your looking for!", root_path %></h2>
-    <div class="gfySize">
-        <div class="gfyitem" data-title=false data-autoplay=true data-controls=false data-expand=false data-id="HappyNecessaryBernesemountaindog"></div>
-    </div>
+      <div class="gfyitem" data-title=false data-autoplay=true data-controls=false data-expand=false data-id="HappyNecessaryBernesemountaindog">
+      </div>
 
-  </div>
-</div>    
     </div>
-  </div>
+  </div>    
 </body>
 </html>
